Fixed alignment of text for planned session.

--- a/css/sauterdevs.css
+++ b/css/sauterdevs.css
@@ -327,6 +327,11 @@ a:focus {
   margin: 0 0 0 0;
 }
 
+.schedule-column > h4 {
+  vertical-align: middle;
+  margin: 0 0 0 0;
+}
+
 .vertically-centered {
   position: absolute;
   margin: 0 0 0 0;
